--- a/Font-end/Trang quản trị/Quản trị/Product/Product.html
+++ b/Font-end/Trang quản trị/Quản trị/Product/Product.html
@@ -44,15 +44,19 @@
     </div>
 
     <!-- Trong template của Angular -->
-    <div  ng-controller="myCtrl" class="selectTL">
+    <div ng-controller="categoryCtrl" class="selectTL">
       <select ng-model="selectedCategory" ng-options="category.tenLoai for category in categories">
         <option value="">Chọn thể loại</option>
       </select>      
     </div>
 
-    
+    <div class="form-group">
+      <input type="file" ng-model="imageFile" accept="image/*">
+    </div>
 
-
+    <div class="button-product">
+      <button ng-click="createProduct()">Thêm sản phẩm</button>
+    </div>
   </div>
 </body>
 
