--- a/Font-end/Trang quản trị/Quản trị/Customer/Customer.html
+++ b/Font-end/Trang quản trị/Quản trị/Customer/Customer.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>Người dùng</title>
-  <link rel="stylesheet" href="Trang quản trị.css">
+  <link rel="stylesheet" type="text/css" href="Trang quản trị.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
@@ -17,9 +17,8 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Playpen+Sans:wght@100;200;300;400&family=Roboto:ital,wght@0,100;0,300;0,400;1,100&display=swap"
     rel="stylesheet">
-  </P>
-  <link rel="stylesheet" href="Customer.css">
-  <script src="Customer.js"></script>
+  <link rel="stylesheet" href="/Trang quản trị/Quản trị/Customer/Customer.css">
+  <script src="/Trang quản trị/Quản trị/Customer/Customer.js"></script>
 </head>
 
 <body>
