--- a/Font-end/Trang quản trị/Quản trị/Home/Home.html
+++ b/Font-end/Trang quản trị/Quản trị/Home/Home.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>Trang quản lý</title>
-  <link rel="stylesheet" href="Home.css">
+  <link rel="stylesheet" href="/Trang quản trị/Quản trị/Home/Home.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
@@ -21,7 +21,7 @@
   <script src="/Angular JS/angular-1.8.2/angular.min.js"></script>
   <script src="/Angular JS/angular-1.8.2/angular-route.js"></script>
 
-  <script src="Home.js"></script>
+  <script src="/Trang quản trị/Quản trị/Home/Home.js"></script>
 </head>
 
 <body ng-app="myApp">
@@ -47,7 +47,7 @@
               <div class="div-line2"></div>
 
               <div class="admin-content-container-tn-kh">
-                <img src="/Lập trình Web Bách Hóa Xanh/HTML/Trang quản trị/Anh/ndung/user.png">
+                <img src="/Trang quản trị/Anh/ndung/user.png">
                 <div class="admin-content-container-tn-kh-nd">
                   <a>Nguyễn Công Nam</a>
                   <p>10 phút trước </p>
@@ -56,7 +56,7 @@
               </div>
   
               <div class="admin-content-container-tn-kh">
-                <img src="/Lập trình Web Bách Hóa Xanh/HTML/Trang quản trị/Anh/ndung/user.png">
+                <img src="/Trang quản trị/Anh/ndung/user.png">
                 <div class="admin-content-container-tn-kh-nd">
                   <a>Nguyễn Công Nam</a>
                   <p>10 phút trước </p>
@@ -65,7 +65,7 @@
               </div>
   
               <div class="admin-content-container-tn-kh">
-                <img src="/Lập trình Web Bách Hóa Xanh/HTML/Trang quản trị/Anh/ndung/user.png">
+                <img src="/Trang quản trị/Anh/ndung/user.png">
                 <div class="admin-content-container-tn-kh-nd">
                   <a>Nguyễn Công Nam</a>
                   <p>10 phút trước </p>
@@ -74,7 +74,7 @@
               </div>
   
               <div class="admin-content-container-tn-kh">
-                <img src="/Lập trình Web Bách Hóa Xanh/HTML/Trang quản trị/Anh/ndung/user.png">
+                <img src="/Trang quản trị/Anh/ndung/user.png">
                 <div class="admin-content-container-tn-kh-nd">
                   <a>Nguyễn Công Nam</a>
                   <p>10 phút trước </p>
@@ -83,7 +83,7 @@
               </div>
 
               <div class="admin-content-container-tn-kh">
-                <img src="/Lập trình Web Bách Hóa Xanh/HTML/Trang quản trị/Anh/ndung/user.png">
+                <img src="/Trang quản trị/Anh/ndung/user.png">
                 <div class="admin-content-container-tn-kh-nd">
                   <a>Nguyễn Công Nam</a>
                   <p>10 phút trước </p>
@@ -92,7 +92,7 @@
               </div>
 
               <div class="admin-content-container-tn-kh">
-                <img src="/Lập trình Web Bách Hóa Xanh/HTML/Trang quản trị/Anh/ndung/user.png">
+                <img src="/Trang quản trị/Anh/ndung/user.png">
                 <div class="admin-content-container-tn-kh-nd">
                   <a>Nguyễn Công Nam</a>
                   <p>10 phút trước </p>
@@ -101,7 +101,7 @@
               </div>
 
               <div class="admin-content-container-tn-kh">
-                <img src="/Lập trình Web Bách Hóa Xanh/HTML/Trang quản trị/Anh/ndung/user.png">
+                <img src="/Trang quản trị/Anh/ndung/user.png">
                 <div class="admin-content-container-tn-kh-nd">
                   <a>Nguyễn Công Nam</a>
                   <p>10 phút trước </p>
@@ -128,18 +128,18 @@
                 <p>6.630.000 đ</p>
                 
               </div>
-              <div><img src="/Lập trình Web Bách Hóa Xanh/HTML/Trang quản trị/Anh/ndung/trend.png"></div>
+              <div><img src="/Trang quản trị/Anh/ndung/trend.png"></div>
   
               <div>
                 <h3>Chi tiêu</h3>
                 <p>1.540.000 đ</p>
               </div>
-              <div><img src="/Lập trình Web Bách Hóa Xanh/HTML/Trang quản trị/Anh/ndung/down.png"></div>
+              <div><img src="/Trang quản trị/Anh/ndung/down.png"></div>
   
             </div>
   
             <div class="admin-content-container-right-img">
-              <img src="/Lập trình Web Bách Hóa Xanh/HTML/Trang quản trị/Anh/ndung/OIG.jpg">
+              <img src="/Trang quản trị/Anh/ndung/OIG.jpg">
             </div>
           </div>
         </div>
