--- a/Font-end/Trang quản trị/Quản trị/Product/Product.html
+++ b/Font-end/Trang quản trị/Quản trị/Product/Product.html
@@ -66,7 +66,7 @@
     </div>
 
     <div ng-controller="productController">
-      <table class="table table-striped">
+      <table class="table-product">
         <thead>
           <tr>
             <th>Ảnh sản phẩm </th>
@@ -80,12 +80,12 @@
         </thead>
         <tbody>
           <tr ng-repeat="product in productList">
-            <td><img ng-src="{{product.image}}" height="50px" width="50px"></td>
-            <td>{{product.name}}</td>
-            <td>{{product.description}}</td>
-            <td>{{product.price}}</td>
-            <td>{{product.manufacturer}}</td>
-            <td>{{product.unit}}</td>
+            <td><img ng-src="{{product.img}}" /></td>
+            <td>{{product.tenSP}}</td>
+            <td>{{product.mota}}</td>
+            <td>{{product.soLuong}}</td>
+            <td>{{product.dongia}}</td>
+            <td>{{product.maTL}}</td>
             <td>
               <button >Sửa</button>
               <button >Xóa</button>
@@ -94,8 +94,6 @@
         </tbody>
       </table>
     </div>
-    
-
 
   </div>
 </body>
