hiển thị hình ảnh thành công nhưng vẫn lỗi base 64 ký tự quá dài @@

--- a/Font-end/Trang quản trị/Quản trị/Product/Product.html
+++ b/Font-end/Trang quản trị/Quản trị/Product/Product.html
@@ -80,7 +80,7 @@
         </thead>
         <tbody>
           <tr ng-repeat="product in productList">
-            <td><img ng-src="{{product.img}}" /></td>
+            <td><img ng-src="{{product.img}}" height="50px " width="50px"/></td>
             <td>{{product.tenSP}}</td>
             <td>{{product.mota}}</td>
             <td>{{product.soLuong}}</td>
