đã fix được lỗi không còn base24string quá dài,, update giao diện

--- a/Font-end/Trang quản trị/Quản trị/Product/Product.html
+++ b/Font-end/Trang quản trị/Quản trị/Product/Product.html
@@ -63,6 +63,13 @@
         
         <button ng-click="createProduct()">Tải ảnh lên </button>
       </div>
+
+      <div class="button-TSXR">
+        <div class="button-TSXR-post">Thêm </div>
+        <div class="button-TSXR-put">Sửa </div>
+        <div class="button-TSXR-delete">Xóa </div>
+        <div class="button-TSXR-refresh">Làm mới </div>
+      </div>
     </div>
 
     <div ng-controller="productController">
