--- a/Font-end/Trang quản trị/Quản trị/Product/Product.html
+++ b/Font-end/Trang quản trị/Quản trị/Product/Product.html
@@ -21,7 +21,7 @@
   <link rel="stylesheet" href="/Trang quản trị/Quản trị/Product/Product.css">
   <script src="/Angular JS/angular-1.8.2/angular.js"></script>
   <script src="/Trang quản trị/Quản trị/Product/Product.js"></script>
-  
+
 </head>
 
 <body ng-app="myApp" ng-controller="productCtrl">
@@ -35,8 +35,8 @@
       <label>Tên sản phẩm</label>
     </div>
     <div class="form-group">
-      <input type="text" ng-model="product.productDescription" name="productDescription" required>
-      <label>Mô tả</label>
+      <a class="form-group-productDescription">Mô tả</a>
+      <textarea id="productDescription" ng-model="product.productDescription" name="productDescription" required></textarea>
     </div>
     <div class="form-group">
       <input type="text" ng-model="product.productQuantity" name="productQuantity" required>
@@ -49,14 +49,15 @@
 
     <div ng-controller="categoryCtrl" class="selectTL">
       <div>
-        <select ng-model="selectedCategory" ng-options="category as category.tenLoai for category in categories">
+        <select ng-model="selectedCategory" ng-options="category.tenLoai for category in categories">
           <option value="">Chọn thể loại</option>
-      </select>
+        </select>
       </div>
-         
+
       <div class="img-group">
         <div class="form-group">
-          <input type="file" id="imageFile" accept="image/*" onchange="angular.element(this).scope().setImageFile(event)">
+          <input type="file" id="imageFile" accept="image/*"
+            onchange="angular.element(this).scope().setImageFile(event)">
         </div>
         
         <button ng-click="imgProduct()">Tải ảnh lên </button>
@@ -84,15 +85,15 @@
         </thead>
         <tbody>
           <tr ng-repeat="product in productList">
-            <td><img ng-src="{{product.img}}" height="50px " width="50px"/></td>
+            <td><img ng-src="{{product.img}}" /></td>
             <td>{{product.tenSP}}</td>
             <td>{{product.mota}}</td>
             <td>{{product.soLuong}}</td>
             <td>{{product.dongia}}</td>
             <td>{{product.maTL}}</td>
             <td>
-              <button ng-click="editProduct(product)">Sửa</button>
-              <button >Xóa</button>
+              <button ng-click="editProduct(product)">Chọn</button>
+              <button ng-click="confirmDelete(product.maSP)">Xóa</button>
             </td>
           </tr>
         </tbody>
