Thêm thành công chức năng chuyển  trang

--- a/Font-end/Trang quản trị/Quản trị/Product/Product.html
+++ b/Font-end/Trang quản trị/Quản trị/Product/Product.html
@@ -96,10 +96,15 @@
               <button ng-click="confirmDelete(product.maSP)">Xóa</button>
             </td>
           </tr>
-        </tbody>
+        </tbody>       
       </table>
+      <div class="button-listproduct">
+        <button class="button-prev" ng-click="buttonPrev()"> &#60; </button>
+        <button class="button-next" ng-click="buttonNext()"> &#62; </button>
+      </div> 
     </div>
 
+       
   </div>
 </body>
 
