sửa gần như tất cả các lỗi, vẫn còn lỗi nhập danh sách

--- a/Font-end/Trang quản trị/Quản trị/Home/Home.html
+++ b/Font-end/Trang quản trị/Quản trị/Home/Home.html
@@ -110,7 +110,7 @@
               </div>
             </div>
           </div>
-          <div class="admin-content-container-right" ng-controller="AdminContentController" >
+          <div class="admin-content-container-right" ng-controller="HomeController" >
             <div class="admin-content-container-right-chart">
               <div class="chart">
                 <div class="chart-month" ng-repeat="month in chartMonths">
