--- a/Font-end/Trang quản trị/Quản trị/Product/Product.html
+++ b/Font-end/Trang quản trị/Quản trị/Product/Product.html
@@ -17,37 +17,38 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Playpen+Sans:wght@100;200;300;400&family=Roboto:ital,wght@0,100;0,300;0,400;1,100&display=swap"
     rel="stylesheet">
-  </P>
   <link rel="stylesheet" href="/Trang quản trị/Quản trị/Product/Product.css">
   <script src="/Angular JS/angular-1.8.2/angular.js"></script>
   <script src="/Trang quản trị/Quản trị/Product/Product.js"></script>
 
 </head>
 
-<body ng-app="myApp" ng-controller="productCtrl">
+<body ng-app="product">
   <div class="customer-container">
-    <div class="form-group">
-      <input type="text" ng-model="product.id" name="productId" required>
-      <label>Mã sản phẩm</label>
-    </div>
-    <div class="form-group">
-      <input type="text" ng-model="product.productName" name="productName" required>
-      <label>Tên sản phẩm</label>
-    </div>
-    <div class="form-group">
-      <a class="form-group-productDescription">Mô tả</a>
-      <textarea id="productDescription" ng-model="product.productDescription" name="productDescription" required></textarea>
-    </div>
-    <div class="form-group">
-      <input type="text" ng-model="product.productQuantity" name="productQuantity" required>
-      <label>Số lượng</label>
-    </div>
-    <div class="form-group">
-      <input type="text" ng-model="product.productPrice" name="productPrice" required>
-      <label>Đơn giá</label>
+    <div >
+      <div class="form-group">
+        <input type="text" ng-model="productId" required>
+        <label>Mã sản phẩm</label>
+      </div>
+      <div class="form-group">
+        <input type="text" ng-model="productName" required>
+        <label>Tên sản phẩm</label>
+      </div>
+      <div class="form-group">
+        <a class="form-group-productDescription">Mô tả</a>
+        <textarea id="productDescription" ng-model="productDescription" required></textarea>
+      </div>
+      <div class="form-group">
+        <input type="text" ng-model="productQuantity" required>
+        <label>Số lượng</label>
+      </div>
+      <div class="form-group">
+        <input type="text" ng-model="productPrice" required>
+        <label>Đơn giá</label>
+      </div>
     </div>
 
-    <div ng-controller="categoryCtrl" class="selectTL">
+    <div class="selectTL" ng-controller="btproductController">
       <div>
         <select ng-model="selectedCategory" ng-options="category.tenLoai for category in categories">
           <option value="">Chọn thể loại</option>
@@ -59,19 +60,18 @@
           <input type="file" id="imageFile" accept="image/*"
             onchange="angular.element(this).scope().setImageFile(event)">
         </div>
-        
+
         <button ng-click="imgProduct()">Tải ảnh lên </button>
       </div>
 
-      <div class="button-TSXR" ng-controller="productController">
+      <div class="button-TSXR">
         <div class="button-TSXR-post" ng-click="createProduct()">Thêm </div>
         <div class="button-TSXR-put" ng-click="updateProduct()">Sửa </div>
-        <div class="button-TSXR-refresh">Làm mới </div>
       </div>
     </div>
 
-    <div ng-controller="productController">
-      <table class="table-product">
+    <div ng-controller="productController" >
+      <table class="table-product" >
         <thead>
           <tr>
             <th>Ảnh sản phẩm </th>
@@ -92,19 +92,19 @@
             <td>{{product.dongia}}</td>
             <td>{{product.maTL}}</td>
             <td>
-              <button ng-click="editProduct(product)">Chọn</button>
+              <button ng-click="selectItem(product)">Chọn</button>
               <button ng-click="confirmDelete(product.maSP)">Xóa</button>
             </td>
           </tr>
-        </tbody>       
+        </tbody>
       </table>
       <div class="button-listproduct">
         <button class="button-prev" ng-click="buttonPrev()"> &#60; </button>
         <button class="button-next" ng-click="buttonNext()"> &#62; </button>
-      </div> 
+      </div>
     </div>
 
-       
+
   </div>
 </body>
 
