--- a/Font-end/Trang quản trị/Quản trị/Product/Product.html
+++ b/Font-end/Trang quản trị/Quản trị/Product/Product.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>Sản phẩm</title>
-  <link rel="stylesheet" href="Trang quản trị.css">
+  <!-- <link rel="stylesheet" href="Trang quản trị.css"> -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
@@ -24,8 +24,8 @@
 </head>
 
 <body ng-app="product">
-  <div class="customer-container">
-    <div >
+  <div class="customer-container" ng-controller="productController" >
+    <div >     
       <div class="form-group">
         <input type="text" ng-model="productId" required>
         <label>Mã sản phẩm</label>
@@ -70,7 +70,7 @@
       </div>
     </div>
 
-    <div ng-controller="productController" >
+    <div >
       <table class="table-product" >
         <thead>
           <tr>
@@ -103,7 +103,7 @@
         <button class="button-next" ng-click="buttonNext()"> &#62; </button>
       </div>
     </div>
-
+    
 
   </div>
 </body>
