--- a/Font-end/Trang quản trị/Trang quản trị.html
+++ b/Font-end/Trang quản trị/Trang quản trị.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>Trang người dùng</title>
-  <link rel="stylesheet" href="Trang quản trị.css">
+  <link rel="stylesheet" href="/Trang quản trị/Trang quản trị.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
@@ -18,7 +18,7 @@
     href="https://fonts.googleapis.com/css2?family=Playpen+Sans:wght@100;200;300;400&family=Roboto:ital,wght@0,100;0,300;0,400;1,100&display=swap"
     rel="stylesheet">
 
-  <!-- <link href="Quản trị/Customer/Customer.html" >  -->
+  <!-- <link href="/Trang đăng nhập/Đăng nhập.html" >  -->
   <script src="/Angular JS/angular-1.8.2/angular.js"></script>
   <script src="/Angular JS/angular-1.8.2/angular-route.js"></script>
 
