Sửa logic API Login
Lỗi khi lấy mã khách hàng, logic hơn khi tạo token

--- a/Font-end/Chi tiết sản phẩm/Chi tiết sản phẩm.html
+++ b/Font-end/Chi tiết sản phẩm/Chi tiết sản phẩm.html
@@ -186,10 +186,6 @@
       </div>
       <p id="rating-value" class="rating-txt">Chúng tôi rất cần đánh giá của bạn để cải thiện dịch vụ</p>
 
-      <div class="btFeedback">
-        <a>Đánh giá</a>
-      </div>
-
     </div>
 
     <div class="comment-section">
@@ -199,8 +195,13 @@
           <span class="username">Nam</span>
         </div>
         <div class="comment-text">
-          <p>Bình luận tại đây ...</p>
+          <input placeholder="Bình luận tại đây ..."></input>
         </div>
+
+        <div class="comment-bt">
+          <button>Bình luận</button>
+        </div>
+        
       </div>
 
     </div>
