Thêm thành công giỏ hàng
Hoàn thiện API giỏ hàng, có sửa 1 số lỗi api

--- a/Font-end/Chi tiết sản phẩm/Chi tiết sản phẩm.html
+++ b/Font-end/Chi tiết sản phẩm/Chi tiết sản phẩm.html
@@ -115,7 +115,7 @@
           <div class="CTSP-DH">
             <div class="btThemGH">
               <img src="Anh/Button/add-to-cart.png">
-              <a>Thêm vào giỏ hàng</a>
+              <a ng-click="addToCart()">Thêm vào giỏ hàng</a>
             </div>
             <div class="btMua">
               <img src="Anh/Button/shopping-cart.png">
