Thêm thành côn xem hóa đơn bán ở trang cá nhân
Sửa lại tên api bill, hiển thị lên giao diện

--- a/Font-end/Trang cá nhân/Bình luận/Bình luận.html
+++ b/Font-end/Trang cá nhân/Bình luận/Bình luận.html
@@ -25,7 +25,7 @@
       </div>
       <div class="comment-text">
         <span class="username">{{ cmt.tenSanPham }}</span>
-        <p style="color: red; margin-top: 5px;">{{ cmt.binhLuan }}</p>
+        <p style="color: #de283b; margin-top: 5px;">{{ cmt.binhLuan }}</p>
         <p>Thời gian : {{cmt.thoiGian | date:'dd/MM/yyyy HH:mm:ss'}}</p>
       </div>
       <div class="comment-bt">
