Thêm api admin quản lý khách hàng
sửa 1 số lỗi logic

--- a/Font-end/Trang quản trị/Trang quản trị.html
+++ b/Font-end/Trang quản trị/Trang quản trị.html
@@ -2,7 +2,7 @@
 <html ng-app="myApp">
 
 <head>
-  <title>Trang người dùng</title>
+  <title>Trang quản trị</title>
   <link rel="stylesheet" href="/Trang quản trị/Trang quản trị.css">
  
   <link rel="icon" type="image/x-icon" href="/Trang chủ/Anh/Icon/Icon-Bach-Hoa-Xanh.png">
@@ -14,6 +14,7 @@
   <script src="/Trang quản trị/Trang quản trị.js"></script>
   <script src="/Trang quản trị/Quản trị/Home/Home.js"></script>
   <script src="/Trang quản trị/Quản trị/Product/Product.js"></script>
+  <script src="/Trang quản trị/Quản trị/Customer/Customer.js"></script>
 </head>
 
 <body >
