--- a/Font-end/Trang quản trị/Quản trị/Product/Product.html
+++ b/Font-end/Trang quản trị/Quản trị/Product/Product.html
@@ -36,7 +36,7 @@
       </div>
     </div>
 
-    <div class="selectTL" ng-controller="btproductController">
+    <div class="selectTL" >
       <div>
         <select ng-model="selectedCategory" ng-options="category.tenLoai for category in categories">
           <option value="">Chọn thể loại</option>
