Chỉnh sửa để quay lại trang chủ khi nhấn trang khác
js chuyển trang

--- a/Font-end/Trang chủ/TrangChu.html
+++ b/Font-end/Trang chủ/TrangChu.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>Bách Hóa Xanh</title>
-  <link rel="stylesheet" href="TrangChu.css">
+  <link rel="stylesheet" href="/Trang chủ/TrangChu.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
