--- a/Font-end/Trang cá nhân/Trang cá nhân.html
+++ b/Font-end/Trang cá nhân/Trang cá nhân.html
@@ -25,8 +25,8 @@
   <header>
     <nav>
       <div class="menuHead">
-        <div class="logo">
-          <a>Bách hóa xanh</a>
+        <div class="logo" ng-controller="home">
+          <a ng-click="viewHome()">Bách hóa xanh</a>
         </div>
         <div class="search-text">
           <input type="search" ng-model="productName" name="Tìm kiếm" placeholder="Tìm kiếm của bạn ..." />
