--- a/Font-end/Trang thanh toán/Trang thanh toán.html
+++ b/Font-end/Trang thanh toán/Trang thanh toán.html
@@ -21,8 +21,8 @@
   <header>
     <nav>
       <div class="menuHead">
-        <div class="logo">
-          <a>Bách hóa xanh</a>
+        <div class="logo" ng-controller="home">
+          <a ng-click="viewHome()">Bách hóa xanh</a>
         </div>
         <div class="search-text">
           <input type="search" name="Tìm kiếm" placeholder="Tìm kiếm của bạn ..." />
