--- a/Font-end/Trang quản trị/Trang quản trị.html
+++ b/Font-end/Trang quản trị/Trang quản trị.html
@@ -15,6 +15,7 @@
   <script src="/Trang quản trị/Quản trị/Home/Home.js"></script>
   <script src="/Trang quản trị/Quản trị/Product/Product.js"></script>
   <script src="/Trang quản trị/Quản trị/Customer/Customer.js"></script>
+  <script src="/Trang quản trị/Quản trị/Account/Account.js"></script>
 </head>
 
 <body >
@@ -84,7 +85,7 @@
                 Khách hàng</div>
 
               <div class="submenu-ql-tt">Quản lý Thanh toán</div>
-              <div class="submenu-ql-nd">Người dùng</div>
+              <div class="submenu-ql-nd" ng-click="navigateToPageTK()" ng-controller="QuanLyTaiKhoanController">Tài khoản</div>
             </div>
 
           </div>
