Thêm button more ở trang thanh tìm kiếm

--- a/Font-end/Trang chủ/TrangChu.html
+++ b/Font-end/Trang chủ/TrangChu.html
@@ -76,6 +76,7 @@
         <a>Đơn giá : <strong class="red-text">{{ product.dongia }} </strong> đ</a>
         <div class="div-line"></div>
       </div>
+      <button ng-click="searchProductMore()">More</button>
     </div>
     <div class="slideshow-container">
       <div class="slide fade">
